--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 packages
 CalculatorAPI/obj
-CalculatorAPI/bin
+CalculatorAPI/bin/ru
+CalculatorAPI/bin/x64
+CalculatorAPI/bin/x86
+CalculatorAPI/bin/*.dll
+CalculatorAPI/bin/*.pdb
+CalculatorAPI/bin/*.xml
+CalculatorAPI/bin/*.config
